<resources>
    <string name="app_name">B;eat Setting Ras 3.0</string>

    <!-- 로그인 화면 -->
    <string name="login">Login</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="storecode">Storecode</string>

    <string name="msg_null_ip">IP is NULL</string>
    <string name="msg_null_port">Port is NULL</string>
    <string name="msg_null_username">username is NULL</string>
    <string name="msg_null_pw">PW is NULL</string>
    <string name="msg_null_storecode">Storecode is NULL</string>
    <string name="msg_reboot_logout">Raspberry is Rebooted. Current Scrren is Closed.</string>

    <string name="default_ip">192.168.190.82</string>
    <string name="default_port">2222</string>
    <string name="default_username"></string>
    <string name="default_storecode"></string>

    <string name="error_connect">Connet failed. Check ip, port, username, password</string>
    <string name="success_connect">Connect Success</string>

    <string name="btn_download">Download Module</string>
    <string name="btn_write_bash">Write bash_profile</string>
    <string name="btn_remove_bash">Remove bash_profile</string>
    <string name="btn_read_bash">Read bash_profile</string>
    <string name="btn_source_bash">Source bash_profile</string>
    <string name="btn_check_export_value">bash_profile 적용 확인</string>
    <string name="btn_reboot_ras">Reboot Ras</string>

    <string name="cmd_init_bash_profile">cmd_init_bash_profile</string>
    <string name="cmd_remove_bash_profile">cmd_remove_bash_profile</string>
    <string name="cmd_read_bash_profile">cmd_read_bash_profile</string>
    <string name="cmd_source_bash_profile">cmd_source_bash_profile</string>
    <string name="cmd_reboot_raspberry">cmd_reboot_raspberry</string>
    <string name="cmd_download_module">postfix_filename</string>
    <string name="cmd_check_export_value">cmd_check_export_value</string>


    <!-- deprecated
    <string-array name="cmd_init_bash_profile">
        <item>rm test1.txt\n</item>
        <item>echo -e "JAVA_HOME=/usr/lib/jvm/jdk1.8.0_15" >> test1.txt\n</item>
        <item>echo -e "PATH='$PATH:$JAVA_HOME/bin'" >> test1.txt\n</item>
        <item>echo -e "\n" >> test1.txt</item>
        <item>echo -e "export JAVA_HOME PATH" >> test1.txt\n</item>
        <item>echo -e "export BOOTH_ID=!@#$" >> test1.txt\n</item>
        <item>echo -e "alias ll= \"\'"ls -all"\'\"" >> test1.txt\n</item>
        <item>echo -e "export SPRING_PROFILES_ACTIVE=real" >> test1.txt\n</item>
        <item>cat test1.txt</item>
    </string-array>
    -->

    <!-- deprecated
    <string-array name="cmd_remove_bash_profile">
        <item>clear\n</item>
        <item>rm test1.txt\n</item>
    </string-array>
    -->

    <!-- deprecated
    <string-array name="cmd_read_bash_profile">
        <item>cat test1.txt</item>
    </string-array>
    -->
</resources>